--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tarefa.css') }}" media="screen"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
     <title>App Tarefas</title>
 </head>
 <body>
@@ -66,19 +70,18 @@
             </form>
           </td>
           <td>
-            <form  method="GET" action="{{ url_for('edit', id=tarefa['_id']) }}" >
-                <input type="submit" value="Editar"
-                       onclick="return confirm('Are you sure you want to delete this entry?')">
-            </form>
+                    <a class="btn btn-primary"
+                    href="{{ url_for('edit', id=tarefa['_id']) }}">
+                    <i class="bi bi-pencil"></i> Editar
+                 </a>
           </td>
-
-
-
-
         </tr>
          {% endfor %}
       </table>
 
     </div>
+
+    <i class="bi bi-trash"></i>
+    
 </body>
 </html>
