--- a/templates/index.html
+++ b/templates/index.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tarefa.css') }}" media="screen"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tarefa.css') }}" media="screen">  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
 
     <title>App Tarefas</title>
 </head>
-<body>
-    <h1>Lista Tarefas</h1>
-    <hr>
-    <div class="content">
-    <form method="POST">
-        <p>
-            <b><label for="nome">Descrição da Tarefa</label></b>
-        </p>
-        <p>
-            <input type="text" name="nome"
-                placeholder="nome da tarefa"></input>
-        </p>
-        <p>
-            <b><label for="data">Data</label></b>
-        </p>
-        <p>
-            <input type="date" name="data"
-                placeholder="insira data"></input>
-        </p>
-        <p>
-            <b><label for="status">Status</label></b>
-        </p>
-       
-        <p>
-            <input id="degree-0" name="status" required type="radio" value="Iniciar">
-            <label for="degree-0">Iniciar</label>
-        </p>
-        <p>
-            <input id="degree-1" name="status" required type="radio" value="Andamento">
-            <label for="degree-1">Andamento</label>
-        </p>
-        <p>
-            <input id="degree-1" name="status" required type="radio" value="Concluída">
-            <label for="degree-1">Concluída</label>
-        </p>
-        <button type="submit">Salvar</button>
-    </form>
-    <hr>
-    <div>
-    <h3> Tarefas </h3>
-    <table>
-        <tr>
-          <th>Nome</th>
-          <th>Status</th>
-          <th>Data</th>
-          <th>Ações</th>
-        </tr>
 
-        {% for tarefa in tarefas %}
-        <tr>
-          <td>{{ tarefa['nome'] }}</td>
-          <td>{{ tarefa['status'] }} </td>
-          <td>{{ tarefa['data'] }}</td>
-          <td>
+<body>
+
+    <div class="container-md">
+        <h1>Lista Tarefas</h1>
+        <hr size="6" color="#000080">
+        
+        <form method="POST">
+            <div class="row mb-3">
+                <div>
+                    <b><label for="nome">Descrição da Tarefa</label></b>
+                </div>
+
+                <div>
+                    <input type="text" name="nome" placeholder="Nome da tarefa"></input>
+                </div>
+
+                <div>
+                    <b><label for="data">Data</label></b>
+                </div>
+
+                <div>
+                    <input type="date" name="data" placeholder="insira data"></input>
+                </div>
+            </div>
+            <fieldset class="row mb-3">
+                <div>
+                    <b><label for="status">Status</label></b>
+                </div>
+                <div>
+                    <input id="degree-0" name="status" required type="radio" value="Iniciar">
+                    <label for="degree-0">Iniciar</label>
+                </div>
+                <div>
+                    <input id="degree-1" name="status" required type="radio" value="Andamento">
+                    <label for="degree-1">Andamento</label>
+                </div>
+
+                <div>
+                    <input id="degree-1" name="status" required type="radio" value="Concluída">
+                    <label for="degree-1">Concluída</label>
+                </div>
+
+
+            </fieldset>
+            <button type="submit" class="btn btn-outline-secondary">Salvar</button>
+            <!-- <button type="submit">Salvar</button> -->
+        </form>
+        <hr size="6" color="#000080">
+        <div>
+            <h3> Tarefas </h3>
+            <table class="table table-striped">
+                <tr>
+                    <th>Nome</th>
+                    <th>Status</th>
+                    <th>Data</th>
+                    <th>Ações</th>
+                </tr>
+
+                {% for tarefa in tarefas %}
+                <tr>
+                    <td>{{ tarefa['nome'] }}</td>
+                    <td>{{ tarefa['status'] }} </td>
+                    <td>{{ tarefa['data'] }}</td>
+                    <!-- <td>
             <form  method="POST" action="{{ url_for('delete', id=tarefa['_id']) }}" >
                 <input type="submit" value="Excluir"
                        onclick="return confirm('Are you sure you want to delete this entry?')">
             </form>
-          </td>
-          <td>
-                    <a class="btn btn-primary"
-                    href="{{ url_for('edit', id=tarefa['_id']) }}">
-                    <i class="bi bi-pencil"></i> Editar
-                 </a>
-          </td>
-        </tr>
-         {% endfor %}
-      </table>
+          </td> -->
 
-    </div>
 
-    <i class="bi bi-trash"></i>
-    
+                    <td>
+                        <a class="btn btn-primary" href="{{ url_for('delete', id=tarefa['_id']) }}">
+                            <i class="bi bi-trash"></i> Excluir
+                        </a>
+                        <a class="btn btn-primary" href="{{ url_for('edit', id=tarefa['_id']) }}">
+                            <i class="bi bi-pencil"></i> Editar
+                        </a>
+                    </td>
+
+
+
+                </tr>
+                {% endfor %}
+            </table>
+
+        </div>
+
+
 </body>
+
 </html>
